<?xml version="1.0"?>
<package format="2">
  <name>tm_calibration</name>
  <version>1.0.0</version>
  <description>
    Package for extracting the factory calibration from a Techman robot and using it with tmX_description to gain a correct URDF model
  </description>

  <author email="cranston.daniel@gmail.com">Daniel Cranston</author>
  <maintainer email="V_ROS-I@tm-robot.com">Techman Robot</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tmr_msgs</build_depend>
  <build_depend>tm_driver</build_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>python-yaml</exec_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tmr_msgs</exec_depend>

  <export></export>
</package>
